[package]
name = "polars-st"
version = "0.6.0"
edition = "2021"
license = "LGPL-2.1"
categories = ["science::geo"]
repository = "https://github.com/Oreilles/polars-st"
keywords = ["polars", "dataframe", "gis", "geospatial", "geometry"]

[lib]
name = "polars_st"
crate-type = ["cdylib"]

[dependencies]
crs-definitions = "0.3"
geo-index = "0.3.1"
geos = { version = "11.1.1", features = ["static", "v3_14_0"]}
num_enum = "0.7.3"
polars = "0.52.0"   
polars-arrow = "0.52.0"
polars-python = "0.52.0"
proj4rs = { version = "0.1.10", features = ["crs-definitions"] }
proj4wkt = "0.1.1"
pyo3 = { version = "*", features = ["abi3-py310"] }
pyo3-polars = { version = "*", features = ["derive", "dtype-array", "dtype-struct", "dtype-categorical"] }
rayon = "1.10.0"
scroll = "0.12.0"
serde = { version = "1.0.219", features = ["derive"] }
