[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "polars_st._lib"

[project]
name = "polars-st"
description = "Spatial extension for Polars DataFrames"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "license"]
dependencies = [
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pyogrio>=0.12.1",
]

[dependency-groups]
dev = [
    "altair>=6.0.0",
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "lonboard>=0.13.0",
    "maturin[zig]>=1.12.6",
    "mkdocs>=1.6.1,<2.0",
    "mkdocs-material>=9.7.4",
    "mkdocstrings-python>=2.0.3",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "shapely>=2.1.2",
]

[project.urls]
Homepage = "https://github.com/Oreilles/polars-st"
Documentation = "https://oreilles.github.io/polars-st/"
Issues = "https://github.com/Oreilles/polars-st/issues"

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "IGNORE_EXCEPTION_DETAIL"

[tool.pyright]
typeCheckingMode = "basic"
reportPrivateImportUsage = "none"

[tool.ruff]
target-version="py310"
line-length = 100
lint.pydocstyle.convention = "google"
lint.select = ["ALL"]
lint.fixable = ["ALL"]
lint.ignore = [
    "FBT", # Boolean traps
    "PIE790", # Unnecessary `...` literal
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "PLR0913", # Too many arguments in function definition
    "ISC001",  # Single line implicit string concatenation (unexpected behavior)
    "COM812",  # Missing trailing comma (unexpected behavior)
    "D1", # Missing docstring in public module
    "PLC0415", # `import` should be at the top-level of a file
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # Assert
    "ANN", # Type annotations
]
